Fixing more inspections and refactoring